# The-edit-lab

./: CMakeLists.txt  README.md
plugins/grayscale/: CMakeLists.txt  Grayscale.cpp
src/: Bridge.cpp  Bridge.h  CMakeLists.txt  IFeature.h  PluginManager.cpp  PluginManager.h  Timeline.cpp  Timeline.h  VideoPlayer.cpp  VideoPlayer.h  main.cpp
tools/: build.ps1  export.ps1  install_qwebchannel.ps1
ui/: app.js  index.html  styles.css
